docs/css/custom.css
/* ### GLOBAL ### 
Global (many styling choices come from  everylayout.dev)
The aim is to be fully responsive without media queries */

/* Modular scale of spaces */
:root {
  --ratio: 1.5;
  --s-5: calc(var(--s-4) / var(--ratio));
  --s-4: calc(var(--s-3) / var(--ratio));
  --s-3: calc(var(--s-2) / var(--ratio));
  --s-2: calc(var(--s-1) / var(--ratio));
  --s-1: calc(var(--s0) / var(--ratio));
  --s0: 1rem;
  --s1: calc(var(--s0) * var(--ratio));
  --s2: calc(var(--s1) * var(--ratio));
  --s3: calc(var(--s2) * var(--ratio));
  --s4: calc(var(--s3) * var(--ratio));
  --s5: calc(var(--s4) * var(--ratio));
}

/* Page content wrapper */
.content-wrapper {
  max-width: 1366px;
  margin-left: auto;
  margin-right: auto;
}

/* Border box */
* {box-sizing: border-box; color:#696969;}

/* Universal font */
* {
   font-family: 'Lato', sans-serif;
   line-height: 1.5;
}

/* Maximum line length */
:root {
  --measure: 60ch;
}

/* Apply line length */
p {
   max-width: var(--measure);
}

/* No maximum line length  */
title,
h1,
h2,
h3 {
   max-width: none;
}

/* Ancors */
a {
   text-decoration: none;
}

/* Content box */
.center {
   box-sizing: content-box;
   max-width: var(--measure);
   margin-left: auto;
   margin-right: auto;
   padding-left: var(--s2);
   padding-right: var(--s2);
}

/* Indent */
.indent {
   margin-left: var(--s3);
}

/* Headers */
h1 {
   font-size: calc(1rem - 0.1vw);
   font-weight: 400;
}
h2 {
   font-size: 1rem;
   font-weight: 700;
   font-style: italic;
}
h3 {
   font-size: calc(1rem + 0.5vw);
   font-weight: 400;
}

/* Universal image margin */
.image-margin {
   margin: var(--s1);
   max-width: 92%;
}

/* Buttons */
.readmore:hover {
   opacity: 1;
}
.btn:hover {
   text-decoration: underline;
}

/* Side by side image-text breaking at threshold */
.img-text-flex {
   display: flex;
   flex-wrap: wrap;
   gap: var(--s2);
   --threshold: 45rem;
}

/* Flexible images */
.img-text-flex > * {
   flex-grow: 1;
   flex-basis: calc((var(--threshold) - 100%) * 999);
}

/* Allow the 2nd child of img-text-flex to grow more */
.img-text-flex > :nth-child(2) {
   flex-grow: 1.4;
}

/* Title and Menu */
.clearfix::after {
   content: "";
   clear: both;
   display: table;
}
.title {
   float: left;
   margin-left: calc(1rem + 2vw);
   width: 55%; 
   font-family: "Raleway", "Arial Black", sans-serif;
   font-size: calc(0.7rem + 1.1vw);
   font-weight: 100;
   color: #696969;
}
.float-right {
   float: right;
   margin-right: calc(0.25rem + 1vw);
}
.menulabel {
   font-size: 0.9rem;
   margin-top: 0.25rem;
   color: #808080;
}
.menuicon {
   width: 1rem;
   height: 1rem;
   margin-top: 0.4rem;
   color: #808080;
   opacity: 0.5;
   cursor: pointer;
}
.menuicon:hover {
   opacity: 1;
}
.menulist {
   display: none;
   max-width: 11ch;
   background-color: #fff;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   }
.menulist a {
   display: block;
   font-size: 0.75em;
   padding: 0.75em;
   opacity: 0.5;
   text-decoration: none;
}
.menulist a:hover {
   display: block;
   opacity: 1;
}
.open-menulist {
   display: block;
   position: absolute;
   right: 5%;
   top: 3rem;
}
.lang {
   margin-top: 0.1rem;
   color: #808080;
   opacity: 0.5;
}
.lang a:hover {
   color: #000;
   text-decoration: underline;
}

/* ### PAGE SPECIFIC ### */

/* Frontpage */

.frontpage-slides {
/* margin: var(--s1);
   max-width: 90%; */
   -webkit-animation-name: fade;
   -webkit-animation-duration: 1.5s;
   animation-name: fade;
   animation-duration: 1.5s;
}
@-webkit-keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
}
@keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
}

/* Blog Page */

.blog-post a {
  text-decoration: underline;
}

/* Donation Page */

.donations {
   max-width: 80ch;
}
.donation-btn-group {
   display: inline-flex;
}
.stripe-btn {
   font-size: calc(0.25rem + 1vw);
   padding: 0.5rem;
   background-color: #3399ff;
   color: #ffffff;
   border: none;
   text-align: center;
   cursor: pointer;
}

/* Contact Page */

.mailto {
   color: #808080;
   opacity: 0.5;
}
.mailto:hover {
   color: #000;
   text-decoration: underline;
}

/* Copyright Page */

.copyright {
   color: #A9A9A9;
   padding: 1rem 1rem 1rem 2rem;
}
.copyinfo {
   color: #808080;
   opacity: 0.5;
}
.copyinfo:hover {
   color: #000;
   text-decoration: underline;
}

/* Reportage Page */

.grid {
   display: grid;
   grid-gap: 0;
   grid-template-columns: repeat(auto-fit, minmax(355px, 1fr));
   margin: auto;
}
.meta-image-stack {
   display: flex;
   flex-direction: column;
}
.meta-image {
  padding-left: var(--s3);
  padding-right: var(--s3);
  width: 95%;
}
.meta-image:hover {
   filter: brightness(75%);
}
.meta-image-locale {
   margin-left: var(--s3);
   margin-bottom: var(--s2);
}

/* Meta-gallery Page */

.gallery-image {
   margin-left: var(--s5);
   margin-bottom: var(--s2);
   width: 50%;
}
.gallery-image:hover {
   filter: brightness(75%);
}

/* Left-to-Right Masonry Layout
   https://w3bits.com/css-grid-masonry/
   grid-gap applies to both dimensions
   grid-template-columns responds to viewport
   grid-auto-rows sets the height of the row
   grid-row-end spans the number of implied rows
*/

.masonry {
   display: grid;
   grid-gap: 0.25em;
   grid-template-columns: repeat(auto-fill, minmax(235px, 1fr));
   grid-auto-rows: 25px;
   max-width: 1130px;
   margin-left: var(--s3);
   margin-right: var(--s3);
}
.span-tall { grid-row-end: span 10; }
.span-sqar { grid-row-end: span 8; }
.span-norm { grid-row-end: span 7; }
.span-wide { grid-row-end: span 4; }

.tall { width: 152px; height: 228px; }
.sqar { width: 228px; height: 171px; }
.norm { width: 228px; height: 152px; }
.wide { width: 228px; height: 76px; }

